[package]
name = "coingecko-tokio"
version = "0.1.0"
description = "CoinGecko v3 API with a tokio runtime, forked from coingecko-rs due to its use of different APIs"
repository = "https://github.com/AwesomeIbex/coingecko-tokio-rs"
license = "MIT"
keywords = [ "cryptocurrency" ]
authors = ["Donovan Dall <awesomealpineibex@gmail.com>", "Michael Aaron Murphy <mmstick@pm.me>"]

edition = "2018"
readme = "README.md"

[dependencies]
const_format = "0.2"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
futures-lite = "1.11"
rust_decimal = "1.8"
derive_setters = "0.1"
fomat-macros = "0.3"
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
